创建docker容器，测试运行编译后文件